# ncurses-game

./: .gitignore  CMakeLists.txt  README.md  config.h  game.c  game.h  main.c  player.c  player.h
